--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_rating_bar: ^3.2.0+1
   flutter:
     sdk: flutter
+  google_fonts: 1.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
