--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,19 +18,19 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  cached_network_image: ^2.5.0
-  flutter_rating_bar: ^3.2.0+1
+  cached_network_image: ^3.0.0
+  flutter_rating_bar: ^4.0.0
   flutter:
     sdk: flutter
-  google_fonts: 1.1.2
+  google_fonts: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_test:
