--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ environment:
 
 dependencies:
   cached_network_image: ^3.0.0
+  equatable: ^2.0.0
   flutter_rating_bar: ^4.0.0
   flutter:
     sdk: flutter
