--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,5 +2,6 @@ include: package:very_good_analysis/analysis_options.2.0.0.yaml
 
 linter:
   rules:
+    overridden_fields: false
     public_member_api_docs: false
     sort_constructors_first: false
